Improve template for report along with PDF output

--- a/Papers/Papers.tex
+++ b/Papers/Papers.tex
@@ -1,5 +1,5 @@
 \documentclass{article}
-\usepackage[final]{neurips_2019}
+\usepackage[preprint]{neurips_2019}
 % \usepackage[utf8]{inputenc} % allow utf-8 input
 % \usepackage[T1]{fontenc}    % use 8-bit T1 fonts
 % \usepackage{hyperref}       % hyperlinks
@@ -21,4 +21,15 @@ Boston University\\
     To add abstract
 \end{abstract}
 \section{First section}
+Some text for first section
+
+\subsection{Subsection of section 1}
+Some text here if needed
+
+\section{Second section}
+Some text for second section
+
+\section*{References}
+if needed
+
 \end{document}
