Add potential sections and some texts

--- a/Papers/Papers.tex
+++ b/Papers/Papers.tex
@@ -20,14 +20,29 @@ Boston University\\
 \begin{abstract}
     To add abstract bibibikb
 \end{abstract}
-\section{First section}
-Some text for first section
+\section{Background}
+Stocks market has been known to be volatile and sentitive to facctors, including news and statistics.
+ Speculation on stocks movement requires complicated techniques and models, still the result is not
+ satisfactory.
+\subsection{Indicators}
+Nothing here for now 
 
-\subsection{Subsection of section 1}
-Some text here if needed
-
-\section{Second section}
+\section{Dataset}
 Some text for second section
+
+\section{Na\"ive Bayes}
+Describe the result from Na\"ive Bayes approach
+
+\section{Logistic Regression}
+Describe the result from logictic regression
+
+\section{Sentiment Analysis}
+
+\section{Recurrent Neural Network}
+In order to capture the objective of accurate prediction, Recurrent Neural Network (RNN) is introduced
+ because its ability to exhibit internal state (memory). Specifically, Long short-term memory (LSTM),
+ a special kind of RNN, is used for implementation as LSTM can deal with vanishing gradient problems
+ and is capable of learning long-term dependencies.
 
 \section*{References}
 if needed
