Add LSTM picture

--- a/Papers/Papers.tex
+++ b/Papers/Papers.tex
@@ -47,8 +47,13 @@ Describe the result from logictic regression
 \\
 \begin{figure}
     \centering
-    \includegraphics[scale=0.5]{assets/Accuracy.png}
+    \includegraphics[scale=0.5]{assets/Accuracy.png}\\
     \caption{Accuracy of the model}
+\end{figure}
+\begin{figure}
+    \centering
+    \includegraphics[scale=0.4]{assets/LSTM.png}
+    \caption{LSTM structure}
 \end{figure}
 Before begin training the model, the dataset, 100 samples in this case, must be preprocesed introduced
  boolean vector through $TfidfVectorizer$ from $sklearn.feature\_extraction.text$. The $max_features$, which is
