--- a/src/Naive Bayes.ipynb
+++ b/src/Naive Bayes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,24 +36,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
-    "advancedvectorizer = TfidfVectorizer( min_df=0.03, max_df=0.2, max_features = 200000, ngram_range = (2, 2))\n",
+    "advancedvectorizer = TfidfVectorizer( min_df=0.03, max_df=0.2, max_features = 200000, ngram_range = (2, 2), stop_words='english')\n",
     "advancedtrain = advancedvectorizer.fit_transform(trainheadlines)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1611, 631)\n"
+      "(1611, 85)\n"
      ]
     }
    ],
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,14 +79,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "NBayes 2 accuracy:  0.5423280423280423\n"
+      "NBayes 2 accuracy:  0.5052910052910053\n"
      ]
     }
    ],
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -126,44 +126,74 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>49</th>\n",
-       "      <td>-5.495760</td>\n",
-       "      <td>at least</td>\n",
+       "      <th>72</th>\n",
+       "      <td>-3.588603</td>\n",
+       "      <td>united states</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>185</th>\n",
-       "      <td>-5.499764</td>\n",
-       "      <td>in china</td>\n",
+       "      <th>76</th>\n",
+       "      <td>-3.642958</td>\n",
+       "      <td>west bank</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>247</th>\n",
-       "      <td>-5.543152</td>\n",
-       "      <td>it is</td>\n",
+       "      <th>10</th>\n",
+       "      <td>-3.704620</td>\n",
+       "      <td>bbc news</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>259</th>\n",
-       "      <td>-5.556370</td>\n",
-       "      <td>killed in</td>\n",
+       "      <th>37</th>\n",
+       "      <td>-3.734047</td>\n",
+       "      <td>new zealand</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>487</th>\n",
-       "      <td>-5.594222</td>\n",
-       "      <td>the united</td>\n",
+       "      <th>56</th>\n",
+       "      <td>-3.760085</td>\n",
+       "      <td>saudi arabia</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>63</th>\n",
+       "      <td>-3.773811</td>\n",
+       "      <td>south korea</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>74</th>\n",
+       "      <td>-3.925463</td>\n",
+       "      <td>war crimes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39</th>\n",
+       "      <td>-3.992305</td>\n",
+       "      <td>north korean</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>-4.051920</td>\n",
+       "      <td>al qaeda</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>-4.060200</td>\n",
+       "      <td>middle east</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     Coefficient       Words\n",
-       "49     -5.495760    at least\n",
-       "185    -5.499764    in china\n",
-       "247    -5.543152       it is\n",
-       "259    -5.556370   killed in\n",
-       "487    -5.594222  the united"
+       "    Coefficient          Words\n",
+       "72    -3.588603  united states\n",
+       "76    -3.642958      west bank\n",
+       "10    -3.704620       bbc news\n",
+       "37    -3.734047    new zealand\n",
+       "56    -3.760085   saudi arabia\n",
+       "63    -3.773811    south korea\n",
+       "74    -3.925463     war crimes\n",
+       "39    -3.992305   north korean\n",
+       "7     -4.051920       al qaeda\n",
+       "33    -4.060200    middle east"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,12 +204,12 @@
     "advcoeffdf = pd.DataFrame({'Words' : advwords, \n",
     "                        'Coefficient' : advcoeffs})\n",
     "advcoeffdf = advcoeffdf.sort_values(['Coefficient', 'Words'], ascending=[0, 1])\n",
-    "advcoeffdf.head(5)"
+    "advcoeffdf.head(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -209,50 +239,80 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>386</th>\n",
-       "      <td>-7.176794</td>\n",
-       "      <td>say the</td>\n",
+       "      <th>78</th>\n",
+       "      <td>-4.854493</td>\n",
+       "      <td>wikileaks founder</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>65</th>\n",
-       "      <td>-7.190919</td>\n",
-       "      <td>been arrested</td>\n",
+       "      <th>50</th>\n",
+       "      <td>-4.855103</td>\n",
+       "      <td>pirate party</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>172</th>\n",
-       "      <td>-7.212155</td>\n",
-       "      <td>if it</td>\n",
+       "      <th>21</th>\n",
+       "      <td>-4.876388</td>\n",
+       "      <td>european parliament</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>84</th>\n",
-       "      <td>-7.218639</td>\n",
-       "      <td>children in</td>\n",
+       "      <th>2</th>\n",
+       "      <td>-4.899953</td>\n",
+       "      <td>10 years</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>383</th>\n",
-       "      <td>-7.323029</td>\n",
-       "      <td>said the</td>\n",
+       "      <th>79</th>\n",
+       "      <td>-4.915401</td>\n",
+       "      <td>world bank</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>42</th>\n",
+       "      <td>-4.935968</td>\n",
+       "      <td>nuclear weapons</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>-4.937108</td>\n",
+       "      <td>10 000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>43</th>\n",
+       "      <td>-5.038358</td>\n",
+       "      <td>officials say</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>-5.071895</td>\n",
+       "      <td>30 years</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>48</th>\n",
+       "      <td>-5.181443</td>\n",
+       "      <td>phone hacking</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     Coefficient          Words\n",
-       "386    -7.176794        say the\n",
-       "65     -7.190919  been arrested\n",
-       "172    -7.212155          if it\n",
-       "84     -7.218639    children in\n",
-       "383    -7.323029       said the"
+       "    Coefficient                Words\n",
+       "78    -4.854493    wikileaks founder\n",
+       "50    -4.855103         pirate party\n",
+       "21    -4.876388  european parliament\n",
+       "2     -4.899953             10 years\n",
+       "79    -4.915401           world bank\n",
+       "42    -4.935968      nuclear weapons\n",
+       "1     -4.937108               10 000\n",
+       "43    -5.038358        officials say\n",
+       "5     -5.071895             30 years\n",
+       "48    -5.181443        phone hacking"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "advcoeffdf.tail(5)"
+    "advcoeffdf.tail(10)"
    ]
   }
  ],
